# sftp-device-archive-sync

./: .gitignore  Device.ini  DeviceArchiveSync.pyw  pyproject.toml  sftp-dir-sync.spec
project/: devices.ini  sftp-dir-sync.py  sftp-dir-sync.pyw
